--- a/TrainingPractico1/app/src/main/res/values/strings.xml
+++ b/TrainingPractico1/app/src/main/res/values/strings.xml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
     <string name="app_name">Training Practico 1</string>
     <string name="action_settings">Settings</string>
     <string name="txt_search_hint">Item</string>
     <string name="btn_search">Search</string>
     <string name="txt_results">Results</string>
     <string name="error_empty_text">Enter an item to search</string>
-    <string name="title_activity_result">ResultActivity</string>
-    <string name="hello_world">Hello world!</string>
-
+    <string name="title_activity_result">Results</string>
+    <string name="stock">Stock</string>
 </resources>
