--- a/TrainingPractico1/app/src/main/res/values-es/strings.xml
+++ b/TrainingPractico1/app/src/main/res/values-es/strings.xml
@@ -8,4 +8,5 @@
     <string name="error_empty_text">Ingrese un producto a buscar</string>
     <string name="title_activity_result">Resultados</string>
     <string name="stock">Disponibilidad</string>
+    <string name="result_progress_loading">Cargando</string>
 </resources>
